--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <button id="restartButton" style="display: none;">Restart</button>
     <script src="script.js"></script>
 </body>
 </html>
