--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
+    <div id="welcomeScreen">
+        <h1>Welcome to flappy Uwak!</h1>
+        <button id="startButton">Start Game</button>
+    </div>
+    <canvas id="gameCanvas" style="display: none;"></canvas>
     <button id="restartButton" style="display: none;">Restart</button>
     <script src="script.js"></script>
 </body>
