--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="welcomeScreen">
-        <h1>Welcome to flappy Uwak!</h1>
+        <div id="bird"></div>
+        <h1>Welcome to Flappy Uwak!</h1>
         <button id="startButton">Start Game</button>
     </div>
     <canvas id="gameCanvas" style="display: none;"></canvas>
