--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <button id="startButton">Start Game</button>
     </div>
     <canvas id="gameCanvas" style="display: none;"></canvas>
-    <button id="restartButton" style="display: none;">Restart</button>
+    <div id="gameOverScreen" style="display: none;">
+        <h2>Game Over!</h2>
+        <p>Try again?</p>
+        <button id="restartButton" class="fancy-button">Play Again</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
