--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <canvas id="gameCanvas" style="display: none;"></canvas>
     <div id="gameOverScreen" style="display: none;">
         <h2>Game Over!</h2>
+        <p>Score: <span id="finalScore">0</span></p>
         <p>Try again?</p>
         <button id="restartButton" class="fancy-button">Play Again</button>
     </div>
