--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +10,15 @@
     <div id="welcomeScreen">
         <div id="bird"></div>
         <h1>Welcome to Flappy Uwak!</h1>
-        <button id="startButton">Start Game</button>
+        <p class="tagalog-text">Lumipad nang maayos, huwag bumangga!</p>
+        <button id="startButton">Maglaro</button>
     </div>
     <canvas id="gameCanvas" style="display: none;"></canvas>
     <div id="gameOverScreen" style="display: none;">
         <h2>Game Over!</h2>
         <p>Score: <span id="finalScore">0</span></p>
-        <p>Try again?</p>
-        <button id="restartButton" class="fancy-button">Play Again</button>
+        <p class="tagalog-text">Ay ang galing! Subukan ulit?</p>
+        <button id="restartButton" class="fancy-button">Maglaro Ulit</button>
     </div>
     <script src="script.js"></script>
 </body>
