--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <div id="score">Score: 0</div>
+    <div id="score">aaScore: 0</div>
     <button id="restartButton" style="display: none;">Restart</button>
     <script src="script.js"></script>
 </body>
