--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <div id="score">aa~Score: 0</div>
+    <div id="welcomeScreen">
+        <h1>Welcome to Flappy Bird</h1>
+        <button id="startButton">Start</button>
+    </div>
+    <canvas id="gameCanvas" style="display: none;"></canvas>
+    <div id="score" style="display: none;">aa~Score: 0</div>
     <button id="restartButton" style="display: none;">Restart</button>
     <script src="script.js"></script>
 </body>
