--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="starsCanvas"></canvas> <!-- Canvas for shooting stars -->
     <div id="welcomeScreen">
         <h1>Welcome to Flappy Bird</h1>
         <button id="startButton">Start</button>
