--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <canvas id="starsCanvas"></canvas> <!-- Canvas for shooting stars -->
     <div id="welcomeScreen">
         <h1>Welcome to Flappy Bird</h1>
+        <p class="subtitle">A futuristic twist on the classic game</p>
+        <div class="decorative-line"></div>
+        <div id="bouncingBird">
+            <div id="dialogBox">"Bakit hindi pwedeng magtanim ng puno sa gitna ng kalsada? Kasi baka magka-traffic!"</div>
+        </div>
         <button id="startButton">Start</button>
     </div>
     <canvas id="gameCanvas" style="display: none;"></canvas>
