--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <canvas id="starsCanvas"></canvas> <!-- Canvas for shooting stars -->
     <div id="welcomeScreen">
-        <h1>Welcome to Flappy Bird</h1>
+        <h1>Welcome to Flappy Egg</h1> <!-- Changed title -->
         <p class="subtitle">A futuristic twist on the classic game</p>
         <div class="decorative-line"></div>
         <div id="bouncingBird">
